--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,3 +6,62 @@
   display: inline-block;
   margin-bottom: 6px;
 }
+
+input[type="range"]::-webkit-slider-runnable-track {
+  -webkit-appearance: none;
+  height: 5px;
+}
+
+input[type="range"]::-moz-range-track {
+  -moz-appearance: none;
+  height: 5px;
+}
+input[type="range"]::-ms-track {
+  appearance: none;
+  height: 5px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 2rem;
+  height: 2rem;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 1rem;
+  margin-top: -0.6rem;
+  pointer-events: auto;
+  cursor: pointer;
+}
+
+input[type="range"]::-webkit-slider-thumb:active {
+  border: 1px solid rgba(112, 112, 239, 0.548);
+}
+
+input[type="range"]::-moz-range-thumb {
+  -moz-appearance: none;
+  width: 2rem;
+  height: 2rem;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 1rem;
+  margin-top: -0.6rem;
+  pointer-events: auto;
+  cursor: pointer;
+}
+input[type="range"]::-moz-range-thumb:active {
+  border: 1px solid rgba(112, 112, 239, 0.548);
+}
+input[type="range"]::-ms-thumb {
+  appearance: none;
+  width: 2rem;
+  height: 2rem;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 1rem;
+  margin-top: -0.6rem;
+  pointer-events: auto;
+  cursor: pointer;
+}
+input[type="range"]::-ms-thumb {
+  border: 1px solid rgba(112, 112, 239, 0.548);
+}
